kani-cli/tests/snapshots/codegen_tests__chapters_lib_rs.snap
---
source: kani-cli/tests/codegen_tests.rs
expression: generated.lib_rs
---
// @generated by kani-cli from test-chapters.yaml — edit freely, but regenerate with `kani-cli generate` to reset.

use kani_shared::ast::{BlueprintBuilder, Expr, OffsetType};
use kani_shared::bindings::exports::kani::extension::manga_provider::Guest;
use kani_shared::host_abi::{extract, HttpRequest};
use kani_shared::{
    bindings, filter_list, to_shared_filters, types::ActiveFilter, wit_types, ExtensionMetadata,
    ExtensionResult, FilterState, MangaExtension,
};
use std::sync::OnceLock;
use wit_types::{Chapter, ChapterInfo, ChapterList, MangaInfo, MangaList, PreferenceSpec};

kani_shared::guest_alloc!();

pub struct TestChapters {
    base_url: String,
}

impl Default for TestChapters {
    fn default() -> Self {
        Self::new()
    }
}

impl TestChapters {
    pub fn new() -> Self {
        Self {
            base_url: "https://example.com".to_string(),
        }
    }

    pub fn metadata() -> ExtensionMetadata {
        ExtensionMetadata {
            id: "test-chapters".to_string(),
            name: "TestChapters".to_string(),
            version: "0.1.0".to_string(),
            base_url: "https://example.com".to_string(),
            language: "en".to_string(),
            nsfw: false,
            unrestricted_http: false,
            mihon_source_id: None,
            rate_limit: None,
            icon: None,
            languages: vec![],
            description: None,
            schema_version: 1_u32,
            min_kani_version: None,
            requires_capabilities: vec![],
            sections: vec![],
            scripts: std::collections::BTreeMap::new(),
            pre_request: None,
            on_status: std::collections::BTreeMap::new(),
            endpoint_pre_request: std::collections::BTreeMap::new(),
            endpoint_on_status: std::collections::BTreeMap::new(),
            cache: std::collections::BTreeMap::new(),
            dsl_schema_version: Some(kani_shared::ast::DSL_SCHEMA_VERSION),
        }
    }
}

impl MangaExtension for TestChapters {
    fn name(&self) -> &str {
        "TestChapters"
    }

    fn get_popular_manga(
        &self,
        _page: i32,
        _page_size: i32,
        _filters: &[ActiveFilter],
    ) -> ExtensionResult<MangaList> {
        Ok(MangaList {
            manga: vec![],
            has_next_page: false,
            total_pages: None,
        })
    }

    fn search_manga(
        &self,
        _query: &str,
        _page: i32,
        _page_size: i32,
        _filters: &[ActiveFilter],
    ) -> ExtensionResult<MangaList> {
        Ok(MangaList {
            manga: vec![],
            has_next_page: false,
            total_pages: None,
        })
    }

    fn get_manga_details(&self, _manga_id: &str) -> ExtensionResult<MangaInfo> {
        Err(kani_shared::ExtensionError::not_found(
            "get_manga_details not implemented for this source".into(),
        ))
    }

    fn get_chapter_list(
        &self,
        manga_id: &str,
        page: i32,
        page_size: Option<i32>,
        sort: Option<String>,
    ) -> ExtensionResult<ChapterList> {
        let _ = (page, page_size, &sort);
        let req = HttpRequest::get(format!(
            "{}/manga/{}/chapters",
            self.base_url,
            kani_shared::request::encode_path_value(&manga_id)
        ))
        .endpoint_id("chapter_list");
        let bp = BlueprintBuilder::new(".chapter-list .chapter")
            .request(req)
            .field("id", Expr::self_ref().attr("data-id"))
            .field("language", Expr::lit("en"))
            .field_opt(
                "number",
                Expr::self_ref()
                    .first(".num")
                    .text()
                    .trim()
                    .parse_float()
                    .fallback(Expr::num(0.0)),
            )
            .field_opt("title", Expr::self_ref().first(".title").text().trim())
            .build();
        let rows = extract::html(None, &bp)?;
        Ok(kani_shared::unpack::unpack_chapter_list(
            &rows,
            kani_shared::unpack::HasNextPage::Static(false),
            kani_shared::unpack::TotalPages::None,
            &[],
        )
        .logged("chapter_list"))
    }

    fn get_pages(&self, _manga_id: &str, _chapter_id: &str) -> ExtensionResult<Chapter> {
        Err(kani_shared::ExtensionError::not_found(
            "get_pages not implemented for this source".into(),
        ))
    }

    fn get_chapter_sort_list(&self) -> ExtensionResult<Vec<wit_types::SortOption>> {
        Ok(vec![])
    }

    fn get_filter_list(&self) -> ExtensionResult<wit_types::FilterList> {
        Ok(filter_list! {})
    }

    fn get_fetched_option_sets(&self) -> ExtensionResult<String> {
        Ok(r#"[]"#.to_string())
    }

    fn get_preferences(&self) -> ExtensionResult<Vec<PreferenceSpec>> {
        Ok(vec![])
    }
}

impl Guest for TestChapters {
    fn get_metadata() -> Result<String, wit_types::ExtensionError> {
        Ok(
            kani_shared::serde_json::to_string(&TestChapters::metadata())
                .expect("ExtensionMetadata serializes to JSON"),
        )
    }

    fn get_popular_manga(
        _page: i32,
        _page_size: i32,
        _filters: Vec<wit_types::ActiveFilter>,
    ) -> Result<MangaList, wit_types::ExtensionError> {
        Ok(MangaList {
            manga: vec![],
            has_next_page: false,
            total_pages: None,
        })
    }

    fn search_manga(
        _query: String,
        _page: i32,
        _page_size: i32,
        _filters: Vec<wit_types::ActiveFilter>,
    ) -> Result<MangaList, wit_types::ExtensionError> {
        Ok(MangaList {
            manga: vec![],
            has_next_page: false,
            total_pages: None,
        })
    }

    fn get_filter_list() -> Result<wit_types::FilterList, wit_types::ExtensionError> {
        get_extension().get_filter_list().map_err(|e| e.into_wit())
    }

    fn get_fetched_option_sets() -> Result<String, wit_types::ExtensionError> {
        get_extension()
            .get_fetched_option_sets()
            .map_err(|e| e.into_wit())
    }

    fn get_manga_details(manga_id: String) -> Result<MangaInfo, wit_types::ExtensionError> {
        get_extension()
            .get_manga_details(&manga_id)
            .map_err(|e| e.into_wit())
    }

    fn get_chapter_list(
        manga_id: String,
        page: i32,
        page_size: Option<i32>,
        sort: Option<String>,
    ) -> Result<ChapterList, wit_types::ExtensionError> {
        get_extension()
            .get_chapter_list(&manga_id, page, page_size, sort)
            .map_err(|e| e.into_wit())
    }

    async fn get_chapter_list_stream(
        manga_id: String,
        sort: Option<String>,
    ) -> kani_shared::StreamReader<Result<ChapterInfo, wit_types::ExtensionError>> {
        kani_shared::bridge_chapter_list_stream(get_extension(), manga_id, sort)
    }

    fn get_chapter_sort_list() -> Result<Vec<wit_types::SortOption>, wit_types::ExtensionError> {
        get_extension()
            .get_chapter_sort_list()
            .map_err(|e| e.into_wit())
    }

    fn get_pages(
        manga_id: String,
        chapter_id: String,
    ) -> Result<Chapter, wit_types::ExtensionError> {
        get_extension()
            .get_pages(&manga_id, &chapter_id)
            .map_err(|e| e.into_wit())
    }

    fn get_preferences() -> Result<Vec<PreferenceSpec>, wit_types::ExtensionError> {
        get_extension().get_preferences().map_err(|e| e.into_wit())
    }

    fn get_url(manga_id: String) -> Result<String, wit_types::ExtensionError> {
        get_extension().get_url(&manga_id).map_err(|e| e.into_wit())
    }
}

static EXTENSION: OnceLock<TestChapters> = OnceLock::new();

fn get_extension() -> &'static TestChapters {
    EXTENSION.get_or_init(TestChapters::new)
}

bindings::export!(TestChapters);
